# simple-bot

./: .dockerignore  .env.example  .gitignore  CHANGES.md  DATA_FLOW.md  DATA_STRATEGY.md  DATA_SUMMARY.md  Dockerfile  QUICKSTART.md  README.md  ROADMAP.md  cat  docker-compose.yml  main.py  migrate_timestamps.py  pyproject.toml  pytest.ini  schema.py
.github/: copilot-instructions.md
apps/backfiller/: __init__.py  main.py
apps/backtester/: main.py
apps/trader/: __init__.py  main.py  runtime.py
config/: config.py  exchanges.py  settings.py
config/strategies/: btc_arima_strategy.yaml  btc_binance_1h.yaml  btc_coinbase_1h.yaml  btc_hybrid_ml.yaml  btc_ma_crossover.yaml  btc_ml_ensemble_strategy.yaml  btc_ml_prediction.yaml  btc_multi_tf_ml_ensemble.yaml  btc_multi_timeframe_example.yaml  btc_random_forest_strategy.yaml  btc_rsi_conservative.yaml  btc_rsi_strategy.yaml  btc_rsi_volume.yaml  btc_usdt_mexc_1h.yaml  btc_usdt_mexc_1m.yaml  btc_usdt_mexc_4h.yaml  eth_binance_15m.yaml  eth_usdt_mexc_15m.yaml  test.yaml
data/: .gitkeep
docs/: ARCHITECTURE.md  AUDIT.md  DATABASE.md  FINAL_TEST_REPORT.md  GRAFANA_PROMETHEUS.md  MULTI_TIMEFRAME.md  ORDERBOOK.md  TESTING_PROGRESS.md  TEST_QUICK_REFERENCE.md  TRADER_ARCHITECTURE.md  WEBSOCKET.md
logs/: .gitkeep
scripts/: __init__.py  check_orderbook_depth.py  populate_db.py  test_websocket.py
tests/: README.md  conftest.py
tests/fixtures/: __init__.py
tests/integration/: test_trader_setup.py
tests/unit/: test_condition_evaluator.py  test_indicators.py  test_risk.py  test_timeframes.py  test_validators.py
