[project]
name = "simple-bot"
version = "0.1.0"
description = "A cryptocurrency trading bot with SQLite database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.4.42",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
