[project]
name = "simple-bot"
version = "0.1.0"
description = "A cryptocurrency trading bot with SQLite database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.4.42",
]

[project.optional-dependencies]
websocket = [
    "ccxt[pro]>=4.4.42",  # WebSocket support for real-time data
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
