[project]
name = "simple-bot"
version = "0.1.0"
description = "A cryptocurrency trading bot with SQLite database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.4.42",  # Includes both REST and Pro (WebSocket) functionality
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "protobuf==5.29.5",  # Required for MEXC WebSocket
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
